# glw

./: .gitignore  CMakeLists.txt  GLW.files  GLW.includes  README.md  add  readme  readme.me  run  todo
inc/: CLog.h  GCamera.h  GContent.h  GEngine.h  GFrameBufferObject.h  GGUI.h  GKeyboard.h  GLight_T.h  GLinker.h  GMesh.h  GMeshShaderHandle_T.h  GMouse.h  GPrimativeFactory.h  GReturnCode.h  GShaderHandle_T.h  GShaderProgram.h  GShaderProgramManager.h  GShaderVariableHandle.h  GTextureManager.h  GUIManager.h  GVertexBufferObject.h  GVertex_T.h  ImageLoader.h  Logger.h  StringFormat.h  TextureManager.h  colors.h
legacy/: CMakeLists.txt.2  CMakeLists.txt.original
shaders/: basic.frag  basic.vert  basic_gui.frag  basic_gui.vert  basic_texture.frag  basic_texture.vert  basic_texture_alpha.frag  basic_texture_blur.frag  basic_texture_gui.frag  blueshift.frag  blur.frag  combine.frag  complex.frag  complex.vert  complex2.frag  complex2.vert  gui.frag  mandle.frag  mandle.vert  phong.frag  phong.vert  phong_texture.frag  phong_texture.vert  phong_texture_normals.frag  phong_texture_normals.vert  refraction.frag  refraction.vert  render_to_texture _glow.frag  render_to_texture.frag  render_to_texture2.frag  shadowmap.frag  shadowmap.vert
src/: GCamera.cpp  GContent.cpp  GEngine.cpp  GFrameBufferObject.cpp  GFrameBufferObject.cpp.autosave  GGUI.cpp  GKeyboard.cpp  GMesh.cpp  GPrimativeFactory.cpp  GShaderProgram.cpp  GShaderProgramManager.cpp  GShaderVariableHandle.cpp  GTextureManager.cpp  GVertexBufferObject.cpp  ImageLoader.cpp  TextureManager.cpp  main.cpp  (+8 more)
(+64 files in other folders)
